--- a/.env
+++ b/.env
@@ -5,10 +5,10 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 
 [DATABASE]
 TYPE = mysql
-HOSTNAME = 88.218.194.8
-DATABASE = webQrcode
-USERNAME = webQrcode
-PASSWORD = wnA7hm7kDAXMf2Y3
+HOSTNAME = localhost
+DATABASE = c2
+USERNAME = c2
+PASSWORD = 123qwe
 HOSTPORT = 3306
 CHARSET = utf8mb4
 PREFIX = wk_
