第二次提交

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DEFAULT_TIMEZONE = Asia/Shanghai
 
 [DATABASE]
 TYPE = mysql
-HOSTNAME = localhost
+HOSTNAME = 127.0.0.1
 DATABASE = c2
 USERNAME = c2
 PASSWORD = 123qwe
